fixed navbar overlap, styling

--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -10,7 +10,7 @@
 }
 
 .header-bg {
-    background-color: rgb(0, 0, 0, 0.85);
+    background-color: rgba(9, 7, 7, 0.85);
     transform: 0.5s;
 }
 .nav-menu {
@@ -43,19 +43,26 @@
         left: -100%;
         z-index: -3;
         transition: 0.3s;
+        opacity: 0.9;
     }
 
     .nav-menu.active {
         left: 0;
+        background-color: black;
     }
 
     .nav-menu li {
         padding: 1rem 0;
     }
-
+    
     .nav-menu li a {
         font-size: 2rem;
     }
+
+    .nav-menu li a:hover {
+        color:rgb(217, 217, 249)
+    }
+
     .hamburger {
         display: initial;
     }
